<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="8dp"
              android:paddingEnd="10dp"
              android:paddingStart="20dp"
              android:paddingTop="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_head"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_timer_black_24dp"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:lines="1"
            android:text="@string/a_title"
            android:textColor="@color/primary_text"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_begin_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:lines="1"
            android:text="@string/a_begin_time"
            android:textColor="@color/primary_text"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_access_time_black_24dp"/>

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:lines="1"
            android:text="@string/a_end_time"
            android:textColor="@color/primary_text"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>