<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding"
    >

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add"
            android:textColor="@color/primary_text"
            android:textSize="20sp"/>

    </LinearLayout>

    <!--分割线-->
    <TextView
        android:id="@+id/tv_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_top"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:padding="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_divider"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/a_title"/>

            <EditText
                android:id="@+id/et_title"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                />

        </LinearLayout>

        <TextView
            style="@style/DividerTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/a_begin_time"/>

            <TextView
                android:id="@+id/tv_begin_time"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                />

        </LinearLayout>

        <TextView
            style="@style/DividerTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/a_end_time"/>

            <TextView
                android:id="@+id/tv_end_time"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                />

        </LinearLayout>

        <TextView
            style="@style/DividerTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/a_content"/>

            <EditText
                android:id="@+id/et_content"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="fill_horizontal"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minLines="4"
                android:scrollbars="vertical"
                android:textColor="@color/primary_text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="设置提醒"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Switch
                android:id="@+id/swt_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        style="@style/FabStyle"
        app:srcCompat="@drawable/ic_save"
        />
</RelativeLayout>