<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/TextStyle"
                android:layout_gravity="center"
                android:text="@string/a_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_title"
                style="@style/EditTextStyle"
                />

        </LinearLayout>

        <TextView
            style="@style/DividerTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/TextStyle"
                android:layout_gravity="center"
                android:text="@string/a_begin_time"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_begin_time"
                style="@style/EditTextStyle"
                />

        </LinearLayout>

        <TextView
            style="@style/DividerTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/TextStyle"
                android:layout_gravity="center"
                android:text="@string/a_end_time"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_end_time"
                style="@style/EditTextStyle"
                />

        </LinearLayout>

        <TextView
            style="@style/DividerTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/TextStyle"
                android:layout_gravity="center"
                android:text="@string/a_content"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/tv_content"
                style="@style/TextStyle"
                android:layout_gravity="fill_horizontal"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minLines="4"
                android:scrollbars="vertical"
                android:textColor="@color/primary_text"
                />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_edit_black_24dp"/>
</RelativeLayout>